# rust-img-vmdk

./: Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
include/: vmdk.h
src/: capi.rs  descriptor.rs  error.rs  header.rs  lib.rs  reader.rs
tests/: corruption.rs  qemu_validation.rs  synthetic.rs  write.rs
