[package]
name = "am-img-vmdk"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Pure-Rust VMDK (VMware Virtual Machine Disk) read+write driver. Monolithic sparse variant, BlockDevice-backed. Exposes a Rust API and a C ABI."
repository = "https://github.com/antimatter-studios/rust-img-vmdk"

[lib]
name = "vmdk"
crate-type = ["staticlib", "rlib"]

[features]
# Enables the qemu-img cross-validation test binary. Off by default so
# `cargo test` does not require qemu-img on PATH. CI installs qemu-utils
# and runs `cargo test --features qemu-validation --test qemu_validation`
# in a dedicated job. qemu-img is invoked as a subprocess only — never
# linked, never bundled into our release artifacts.
qemu-validation = []

[dependencies]
am-fs-core = { path = "../rust-fs-core", version = "0.2" }

[dev-dependencies]
# JSON parsing for `qemu-img info --output=json` in the qemu-validation
# test harness. Test-only.
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "unwind"

[profile.dev]
opt-level = 1
panic = "unwind"
